Fix the sizing issue on mobile

--- a/src/components/styles/_about.scss
+++ b/src/components/styles/_about.scss
@@ -7,7 +7,7 @@
   // align-items: center;
 
   .details {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   p {
@@ -102,6 +102,7 @@
 
     .description {
       opacity: .5;
+      font-size: 1.6rem;
     }
 
     .stack_list {
