--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ html {
 
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   line-height: 1.5;
   scroll-behavior: smooth;
 }
@@ -27,7 +27,7 @@ h3 {
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 h2 {
@@ -35,7 +35,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2.4rem;
+  font-size: 2.2rem;
   font-weight: 600;
 }
 
